# day-deals

./: .gitignore  README.md  day.py  main.py  offers.json  pyproject.toml  requirements.txt  week.py
daydeal/: drivers.py  run.py  safe_math.py  telegram.py  text.py
daydeal/models/: __init__.py  config.py  message.py  offer.py  offer_parser.py
src/: main.py
